Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-16402

CLONE - engine_destroy race with VBucketMemoryDeletionTask

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 3.1.2
    • 3.1.0
    • storage-engine
    • Security Level: Public
    • None
    • Untriaged
    • Unknown

    Description

      Have found this same issue in testing 3.1.0 (MP1), need a fix backported to 3.1

      ... See MB-14041
      Issue is that when we request all tasks to stop and the task object is deleted and all members of VBucketMemoryDeletionTask are deleted and the RCPtr<VBucket> is looking at a VBucket (and is the only reference) chained deletion occurs and we assert in the objectregistry because the thread-local storage has no engine stashed away for accounting of the Blob deletion.

      If the RCPtr has a 0 ref or > 1 refs we escape the defect.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jwalker Jim Walker
              ianmccloy Ian McCloy (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty