MB-16402:  Ensure objectregistry has an engine when deleting the VBucketMemoryDeletionTask.

Ensure the VBucketMemoryDeletionTask is finished before shutting down
to avoid the vbucket deletion occuring on the task with no engine pointer
in thread-local storage (for ObjectRegistry).

This is a backport to 3.0.x of MB-14041

Change-Id: I63caf59bce0e89ed166bffcbd2d0965a91656725
Reviewed-on: http://review.couchbase.org/55594
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>